[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 165.0
margin_top = 157.0
margin_right = 388.0
margin_bottom = 183.0
text = "Insira 10 numeros"
align = 1
valign = 1
autowrap = true

[node name="ColorRect" type="ColorRect" parent="Label"]
margin_top = 47.0
margin_right = 224.0
margin_bottom = 87.0
color = Color( 0, 0, 0, 1 )

[node name="LineEdit" type="LineEdit" parent="Label"]
margin_left = -1.0
margin_top = 47.0
margin_right = 224.0
margin_bottom = 88.0

[node name="Button" type="Button" parent="Label"]
margin_left = 65.0
margin_top = 116.0
margin_right = 173.0
margin_bottom = 174.0
text = "Clique aqui"

[node name="Button2" type="Button" parent="."]
margin_left = 691.0
margin_top = 266.0
margin_right = 799.0
margin_bottom = 324.0
text = "Clique aqui"

[node name="ColorRect" type="ColorRect" parent="Button2"]
margin_left = -154.0
margin_top = -70.0
margin_right = 238.0
margin_bottom = -14.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Button2"]
margin_left = -74.0
margin_top = -118.0
margin_right = 163.0
margin_bottom = -87.0
text = "Clique no bot√£o para ver a sua lista ordenada"
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="Button2"]
margin_left = -153.0
margin_top = -70.0
margin_right = 241.0
margin_bottom = -15.0
autowrap = true

[node name="arrayInserido" type="Label" parent="."]
margin_left = 166.0
margin_top = 203.0
margin_right = 391.0
margin_bottom = 243.0
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="Label/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
